--- a/components/card/card.css
+++ b/components/card/card.css
@@ -3,7 +3,8 @@
 }
 .card {
   width: 300px;
-  background-color: var(--color-secondary);
+  /* background-color: var(--color-secondary); */
+  background-color: none;
 }
 
 .card__info {
@@ -22,4 +23,16 @@
 
 li {
   list-style: none;
+}
+.card__image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.card__image {
+  width: 85%;
+  border-radius: 30px;
+  box-shadow: 0px 20px 30px 0px rgba(74, 184, 23, 0.28);
 }
