update font typeface

--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Fjalla One";
+  src: url(/assets/Fjalla_One/FjallaOne-Regular.ttf) format("truetype");
+}
+
 .card-container {
   margin-bottom: 10px;
 }
@@ -34,12 +39,13 @@ li {
 .card__image {
   width: 85%;
   border-radius: 30px;
-  box-shadow: 0px 20px 30px 0px rgba(74, 184, 23, 0.28);
+  box-shadow: 0px 20px 50px 0px rgba(74, 184, 23, 0.28);
 }
 
 .card__title {
   color: #4ab817;
-  font-size: xx-large;
-  font-weight: bold;
+  font-size: xxx-large;
+  font-weight: bolder;
   text-align: center;
+  font-family: Fjalla One;
 }
