--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -1,7 +1,23 @@
 .button {
+  background-color: transparent;
   border: none;
+  color: #4ab817;
+  border-radius: 20px;
+  cursor: pointer;
+  font-family: Fjalla One;
 }
 
 .button:hover {
-  background-color: var(--color-secondary);
+  background-color: rgb(7, 159, 159);
+  color: white;
+}
+
+button:disabled {
+  background-color: transparent;
+  color: #666;
+}
+
+@font-face {
+  font-family: "Fjalla One";
+  src: url(../../assets/Fjalla_One/FjallaOne-Regular.ttf) format("truetype");
 }
