--- a/components/card/card.css
+++ b/components/card/card.css
@@ -11,11 +11,13 @@
 
 .card-container {
   margin-bottom: 10px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .card {
-  width: 300px;
-  /* background-color: var(--color-secondary); */
+  width: 100%;
+  max-width: 400px;
   background-color: none;
 }
 
