finish adjust responsiveness

--- a/components/card/card.css
+++ b/components/card/card.css
@@ -54,7 +54,7 @@ li {
 
 .card__title {
   color: #4ab817;
-  font-size: xxx-large;
+  font-size: xx-large;
   font-weight: bolder;
   text-align: center;
 }
