--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 @import "components/search-bar/search-bar.css";
 @import "components/nav-button/nav-button.css";
 @import "components/nav-pagination/nav-pagination.css";
+@import "components/error/error.css";
 
 * {
   box-sizing: border-box;
