--- a/components/error/error.html
+++ b/components/error/error.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="./error.css" />
   </head>
   <body class="error__container">
-    <h1 class="error__title">Error : "WUBBA LUBBA DUB-DUB!"</h1>
+    <h1 class="error__title">ERROR</h1>
+    <h1 class="error__content">"WUBBA LUBBA DUB-DUB!"</h1>
     <img
       class="error__image"
       src="../../images/rick_and_morty_png_by_lalingla_db72d4x-fullview.png"
