--- a/components/error/error.html
+++ b/components/error/error.html
@@ -14,7 +14,7 @@
     <h1 class="error__content">"WUBBA LUBBA DUB-DUB!"</h1>
     <img
       class="error__image"
-      src="../../images/rick_and_morty_png_by_lalingla_db72d4x-fullview.png"
+      src="././images/rick_and_morty_png_by_lalingla_db72d4x-fullview.png"
       width="400"
     />
   </body>
