fixed image source

--- a/components/error/error.html
+++ b/components/error/error.html
@@ -12,6 +12,6 @@
   <body class="error__container">
     <h1 class="error__title">ERROR</h1>
     <h1 class="error__content">"WUBBA LUBBA DUB-DUB!"</h1>
-    <img class="error__image" src="../../images/errorRM.png" width="400" />
+    <img class="error__image" src="././images/errorRM.png" width="400" />
   </body>
 </html>
