--- a/components/search-bar/search-bar.css
+++ b/components/search-bar/search-bar.css
@@ -1,19 +1,24 @@
 .search-bar-container {
-  width: 80vw;
+  width: 48px;
   max-width: 400px;
   margin: auto;
   position: sticky;
   top: 20px;
+  transition: all ease-in-out 0.7s;
 }
 
-.search-bar {
+.search-bar-container:hover {
+  width: 80vh;
+}
+
+.search-bar-container .search-bar {
   padding: 10px 20px;
   background-color: var(--color-secondary);
   display: grid;
   grid-template-columns: 1fr 24px;
   margin-bottom: 20px;
   border: solid rgba(0, 0, 0, 0.034) 1px;
-  border-radius: 50px;
+  border-radius: 60px;
   box-shadow: 0px 2px 10px 0px rgba(74, 184, 23, 0.185);
 }
 
@@ -21,6 +26,12 @@
   background-color: transparent;
   border: none;
   color: var(--color-primary);
+  opacity: 0;
+  transition: all ease-in-out 0.7s;
+}
+
+.search-bar__input:hover {
+  opacity: 100%;
 }
 
 .search-bar__button {
@@ -34,5 +45,11 @@
 
 .search-bar__icon {
   width: 20px;
-  /* filter: invert(); */
+  transition: all ease-in-out 0.7s;
+  position: absolute;
+  right: 3vw;
+  bottom: 3vh;
+}
+
+.search-bar__icon:hover {
 }
