rename[hoverClass]: new name hover__effect

--- a/components/nav-button/nav-button.css
+++ b/components/nav-button/nav-button.css
@@ -13,7 +13,7 @@ button:disabled {
   background-color: transparent;
   color: #666;
 }
-.hoverEffect:hover {
+.hover__effect:hover {
   background-color: rgb(7, 159, 159);
   color: white;
 }
